# sensorvault

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build_docker.sh  docker-compose.yml  settings.toml
.github/: rust.yml
collector/: .dockerignore  Cargo.toml  Dockerfile  README.md  app_config.toml
collector/.sqlx/: query-172c3e887d56dfca01815c6c10ac214252710fe23e8c1bc04bf187c202a4f319.json  query-1829a235eb13e93398f870b6df6969251ca2c6aa5ffe1d8e3dfdfbc4a0217f49.json  query-5a58ba28df40d6bd301b8cffa6f632d94ca2e95907a47cf5a949d5910d92c050.json  query-7630626a2e92f7c199c084c34d9cdf0cd5cf67667981c35076114f96905c957c.json  query-8abdaf9b5e0c102d4b853710d00e1c0f2ca4f8859a95bf41065b4ba9b53d4fa7.json
collector/migrations/: 20250806161740_create_sensors.down.sql  20250806161740_create_sensors.up.sql  20250824100615_seed_sensors.down.sql  20250824100615_seed_sensors.up.sql
collector/src/: config.rs  main.rs
collector/src/db/: mod.rs  models.rs
collector/src/ingestion/: input.rs  mod.rs
collector/src/ingestion/decoder/: mod.rs  mqtt.rs  raw.rs
collector/src/persistence/: mod.rs  models.rs
common/: Cargo.toml
common/src/: lib.rs  models.rs  settings.rs
core/: Cargo.toml
core/src/: lib.rs  models.rs  settings.rs
db/: Cargo.toml  README.md
db/.sqlx/: query-87b911c61bd200c51630c2e1e88e80a673b2f85db114141c98aa2c64261f4c1c.json  query-dfceb964d24b76edc423c533b91fdb12ff56c6a13abacc21d1c7e034e9cb9017.json  query-e1906a1d1ef9ef771346416c6230e0e026860b1cb02e587d237d0d41eec80884.json
db/migrations/: 20250806161740_create_sensors.down.sql  20250806161740_create_sensors.up.sql
db/src/: data.rs  lib.rs  registry.rs
dispatcher/: Cargo.toml
dispatcher/src/: main.rs
docs/: requirements.md
evaluator/: Cargo.toml
evaluator/onnx/: linear_regression.ipynb  sensor_health.onnx
evaluator/src/: main.rs  model.rs
infra/: Cargo.toml
infra/src/persistence/: mod.rs  models.rs  postgres.rs
messaging/: Cargo.toml
messaging/src/: lib.rs
mqtt_sim/: Cargo.toml
mqtt_sim/src/: main.rs
mqtt_worker/: Cargo.toml
mqtt_worker/src/: main.rs
sensor_simulator/: Cargo.toml
sensor_simulator/src/: main.rs
