[workspace]
members = [
    "core",
    "collector",
    "mqtt_sim",
    "sha-cli",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.99"

[workspace.dependencies.tracing]
version = "0.1"

[workspace.dependencies.tracing-subscriber]
version = "0.3"
features = ["local-time"]
default-features = true

[profile.dev.package.sqlx-macros]
opt-level = 3
