[workspace]
members = [
    "core",
    "collector",
    "mqtt_sim",
    "cli",
    "evaluator",
]
default-members = ["core", "infra"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.99"
tokio = { version = "1.50.0", default-features = false, features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", default-features = true, features = ["local-time"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
