[package]
name = "collector"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
chrono = "0.4"
rumqttc = "0.25.1"
sensorvault-core = { path = "../core" }
infra = { path = "../infra" }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
config = "0.15.22"