[package]
name = "dispatcher"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
futures = { version = "0.3.28", default-features = false, features = ["std"] }
serde_json = "1.0.142"
serde_cbor = "0.11"
common = { path = "../common" }
db = { path = "../db" }
messaging = { path = "../messaging" }
anyhow = "1.0.99"