[package]
name = "evaluator"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
ndarray = "0.17.2"
anyhow.workspace = true
tonic = "*"
prost = "0.14"
tonic-prost = "*"

[build-dependencies]
tonic-prost-build = "*"