[package]
name = "mqtt_worker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
async-nats = "0.42.0"
serde_cbor = "0.11"
chrono = "0.4"
rumqttc = "0.24.0"
common = { path = "../common" }
messaging = { path = "../messaging" }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true